--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.3.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-multiple-select": "^0.5.9",
     "react-native-pager-view": "^5.4.11",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.13.1",
+    "react-native-select-dropdown": "^2.0.4",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0"
   },
