--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^2.0.4",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
